# tangle

./: .gitignore  API.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Dockerfile  OPERATIONS.md  README.md  pyproject.toml  tangle-python-design-doc-v3.md
.github/workflows/: publish.yml  tests.yml
src/tangle/: __init__.py  async_monitor.py  cli.py  config.py  metrics.py  monitor.py  retention.py
src/tangle/detector/: base.py
src/tangle/graph/: wfg.py
src/tangle/integrations/: langgraph.py  mcp.py  otel.py
src/tangle/replay/: __init__.py  bundle.py  diff.py  log.py  replay.py
src/tangle/resolver/: cancel.py  chain.py  errors.py  escalate.py  tiebreaker.py
src/tangle/server/: app.py  auth.py  idempotency.py  routes.py
src/tangle/store/: memory.py  sqlite.py
state/: cancel-signal-state.json
tangle-py/: Dockerfile  Dockerfile.test  Makefile  docker-compose.yml  pyproject.toml
tangle-py/examples/: customer_support_escalation.py  langgraph_deadlock_detection.py
tangle-py/src/tangle/: __init__.py  config.py  logging.py  metrics.py  monitor.py  types.py
tangle-py/src/tangle/detector/: cycle.py  livelock.py
tangle-py/src/tangle/graph/: snapshot.py  wfg.py
tangle-py/src/tangle/integrations/: langgraph.py  otel.py
tangle-py/src/tangle/resolver/: alert.py  base.py  cancel.py  chain.py  escalate.py  tiebreaker.py
tangle-py/src/tangle/server/: routes.py
tangle-py/src/tangle/store/: base.py  memory.py  sqlite.py
tangle-py/tests/: conftest.py  test_async_monitor.py  test_cli.py  test_config.py  test_metrics.py  test_monitor.py  test_types.py
tangle-py/tests/benchmarks/: test_bench_cycle.py
tangle-py/tests/detector/: test_cycle.py  test_livelock.py
tangle-py/tests/examples/: test_langgraph_deadlock_example.py
tangle-py/tests/graph/: test_snapshot.py  test_wfg.py
tangle-py/tests/integration/: test_langgraph_e2e.py  test_otel_e2e.py  test_resolution_e2e.py  test_server_e2e.py
tangle-py/tests/integrations/: test_langgraph.py  test_otel.py
tangle-py/tests/resolver/: test_resolvers.py
tangle-py/tests/server/: test_routes.py
tangle-py/tests/store/: conformance.py
tests/: test_config.py  test_retention.py
tests/benchmarks/: test_bench_cycle.py
tests/detector/: test_cycle.py  test_livelock.py
tests/examples/: test_customer_support_example.py  test_langgraph_deadlock_example.py
tests/graph/: test_snapshot.py  test_wfg.py
tests/integration/: test_otel_e2e.py  test_server_e2e.py
tests/integrations/: test_mcp.py  test_otel.py
tests/replay/: test_bundle.py  test_diff.py  test_log.py  test_replay.py
tests/resolver/: test_resolvers.py
tests/server/: test_routes.py
tests/store/: test_memory.py  test_sqlite.py
